// Vitest Snapshot v1

exports[`PageFramework > rendrer slik den skal i full width 1`] = `
<DocumentFragment>
  <main
    class="_main_58a32b"
  >
    <div
      class="_headerGroup_58a32b"
    >
      <h1
        class="_headerGroupTitle_58a32b navds-heading navds-heading--large"
      >
        application.title
      </h1>
    </div>
  </main>
</DocumentFragment>
`;

exports[`PageFramework > rendrer slik den skal, med main tag og Heading på riktig nivå 1`] = `
<DocumentFragment>
  <main
    class="_main_58a32b _main__isFramed_58a32b"
  >
    <div
      class="_headerGroup_58a32b"
    >
      <h1
        class="_headerGroupTitle_58a32b _headerGroupTitle__isFramed_58a32b navds-heading navds-heading--large"
      >
        application.title
      </h1>
    </div>
  </main>
</DocumentFragment>
`;
